:; 	modified:   app/build.gradle

--- a/app/src/main/res/layout/item_top_main_lv.xml
+++ b/app/src/main/res/layout/item_top_main_lv.xml
@@ -1,6 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey_f3">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="20dp">
+        <TextView
+            android:id="@+id/item_top_main_lv_tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="本月支出"/>
+        <TextView
+            android:id="@+id/item_top_main_lv_balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="￥0"
+            android:layout_below="@id/item_top_main_lv_tv1"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"/>
+        <ImageView
+            android:id="@+id/item_top_main_lv_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:src="@mipmap/show"
+            android:layout_alignTop="@id/item_top_main_lv_balance"/>
+        <TextView
+            android:id="@+id/item_top_main_lv_income_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="本月收入"
+            android:layout_below="@id/item_top_main_lv_balance"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/item_top_main_lv_income"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/item_top_main_lv_balance"
+            android:layout_toEndOf="@id/item_top_main_lv_income_title"
+            android:text="￥0"
+            android:textColor="@color/black" />
+        <TextView
+            android:id="@+id/item_top_main_lv_budget"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:textColor="@color/black"
+            android:text="￥0"
+            android:layout_below="@id/item_top_main_lv_balance"/>
+        <TextView
+            android:id="@+id/item_top_main_lv_budget_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="本月预算"
+            android:layout_toLeftOf="@id/item_top_main_lv_budget"
+            android:layout_below="@id/item_top_main_lv_balance"/>
+        <TextView
+            android:id="@+id/item_top_main_lv_analysis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="查看图表分析"
+            android:textColor="@color/teal_700"
+            android:layout_centerHorizontal="true"
+            android:drawablePadding="5dp"
+            android:layout_below="@id/item_top_main_lv_income_title"
+            app:drawableStartCompat="@mipmap/chart" />
+    </RelativeLayout>
+</LinearLayout>
