--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -18,7 +18,7 @@
             android:id="@+id/activity_record_tabs"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:tabGravity="center"
+            app:tabGravity="center"/>
 
 
 
